--- a/index.html
+++ b/index.html
@@ -2,23 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <!Устанавливает кодировку документа на UTF-8>
+  
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <!Обеспечивает корректный масштаб на мобильных устройствах>
+
   <title>MobX ToDo SPA</title>
+  <!Заголовок страницы во вкладке браузера>
+
   <link rel="stylesheet" href="style.css" />
+  <!Подключение внешнего CSS-файла для стилизации интерфейса>
 </head>
 <body>
   <div class="container">
     <h1>📝 Список задач</h1>
+    <!Заголовок приложения>
+
     <div id="todo-app">
       <input type="text" id="new-task" placeholder="Введите задачу..." />
+      <!Поле для ввода новой задачи>
+
       <button id="add-task">Добавить</button>
+      <!Кнопка добавления задачи>
+
       <ul id="task-list"></ul>
+      <!Сюда будут динамически добавляться элементы списка задач>
     </div>
   </div>
 
+  <!Подключение библиотеки MobX (UMD-версия для браузера)>
   <script src="https://unpkg.com/mobx@6.12.0/dist/mobx.umd.production.min.js"></script>
+
+  <!MobX Utils (в данном случае не используется в основном коде, но подключено)>
   <script src="https://unpkg.com/mobx-utils@6.1.5/dist/mobx-utils.umd.production.min.js"></script>
 
   <script src="app.js"></script>
+  <!Подключение основного скрипта приложения>
 </body>
 </html>
+
